QQuickTextInput: update cursor rectangle after padding changed

The position of cursor delegate needs to be updated when we change
padding, otherwise it will be in a wrong position.

Fixes: QTBUG-91867
Change-Id: I89ca84fe893ebf517ab67890196eede14a4055d7
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit d98694c4023881673259ba040c10df7e71ec3d37)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>